# omnibuild

./: .gitignore  Cargo.toml
example/: .gitignore  deps.lua  init.lua  project.lua
example/cfg/build_targets/: client.lua  editor.lua  server.lua
example/cfg/target_configurations/: debug.lua  release.lua
example/config/: build_configs.lua  project.lua  targets.lua
example/src/client/ClientExecutable/: module.lua
example/src/editor/EditorExecutable/: module.lua
example/src/editor/EditorOnlyDynamicLibModule/: module.lua
example/src/runtime/DynamicLibModule/: module.lua
example/src/runtime/DynamicLibModule/private/: test.cpp
example/src/runtime/DynamicLibModule/public/: test.h
example/src/runtime/StaticLibModule/: module.lua
example/src/runtime/StaticLibModule/private/: other_file.cpp  runtime_sl.cpp
example/src/runtime/StaticLibModule/public/: runtime_sl.h
example/src/server/ServerExecutable/: main.cpp  module.lua
macros/: Cargo.toml
macros/src/: lib.rs
src/: build_modules.rs  cli.rs  load_lua_helpers.rs  lua_api.rs  main.rs
src/compiler/: clangd.rs  compiler.rs  gcc.rs  inc_build_cache.rs  mod.rs
src/lua/: api.rs  git_utils.rs  init_globals.rs  load_lua_helpers.rs  mod.rs  package_info.rs
src/lua/config/: build_config.rs  build_target_config.rs  mod.rs  module_config.rs  package_config.rs  project_config.rs  target_config.rs  target_configuration_config.rs
src/lua_configuration/: build_target_config.rs  init_globals.rs  mod.rs  module_config.rs  project_config.rs  target_configuration_config.rs
src/modules/: mod.rs
