[package]
name = "omnibuild"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ob"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
clap = {version = "4.5.21", features = ["derive"]}
lazy_static = "1.5.0"
macros = {path = "macros"}
mlua = {version = "0.10.1", features = ["lua54"]}
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
twox-hash = "2.1.0"
